--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans" rel="stylesheet">
 </head>
 <body>
-  <img class="banner" src="assets/images/freakazoid.jpg" alt="Meet Freakazoid">
+  <img class="banner" src="assets/images/freakazoid-banner.png" alt="Meet Freakazoid">
 <h1 class="header">Freak Out!</h1>
 <p class="main">Welcome, clever girls and boys.</p>
 <p class="main">I'm impressed you've made it this far. I'm Freakazoid, hero to literally tens of people across the multiverse</p>
