--- a/index.html
+++ b/index.html
@@ -2,34 +2,108 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/style/style.css">
+  <meta name= "viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Freakazoid</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans" rel="stylesheet">
-</head>
-<body>
-  <img class="banner" src="assets/images/freakazoid-banner.png" alt="Meet Freakazoid">
-<h1 class="header">Freak Out!</h1>
-<p class="main">Welcome, clever girls and boys.</p>
-<p class="main">I'm impressed you've made it this far. I'm Freakazoid, hero to literally tens of people across the multiverse</p>
-<p class="main">What's that? You don't <em>remember</em> me?</p>
-<p class="main">This site should offer an easy reminder of who I am and why I am great. Because I am, you can ask anybody and they will tell you that I am powerful, creative and a very stable genius.</p>
-<h3 class="listhead">My known enemies</h3>
-<ul class="enemies">
-  <li>Armondo Gutierrez</li>
-  <li>The Lobe</li>
-  <li>Cave Guy</li>
-  <li>Candle Jack</li>
-  <li>Cobra Que</li>
-</ul>
-<h3 class="listhead">My Powers (TREMBLE BEFORE THEM)</h3>
-<ol>
-  <li>Flight</li>
-  <li>Light Speed</li>
-  <li>Superhuman Strength</li>
-  <li>Honestly, whatever the situation calls for …</li>
-</ol>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/style/style.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+Explore the docs
+Official Themes
+Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
 
+Bootstrap Themes
+Browse themes
+
+</head>
+<body class="container">
+  <div class="jumbotron"><h1>FREAKAZOID!</h1></div>
+  <div class="row">
+<div class="col-md-6 col-xs-12">
+    <img class="banner" src="assets/images/freakazoid-banner.png" alt="Meet Freakazoid">
+</div>
+  <div class="col-md-6 col-xs-12">
+    <h1 class="header">Freak Out!</h1>
+    <p class="main">Welcome, clever girls and boys.</p>
+    <p class="main">I'm impressed you've made it this far. I'm Freakazoid, hero to literally tens of people across the multiverse</p>
+    <p class="main">What's that? You don't <em>remember</em> me?</p>
+    <p class="main">This site should offer an easy reminder of who I am and why I am great. Because I am, you can ask anybody and they will tell you that I am powerful, creative and a very stable genius.</p>
+<button type="button" class="btn-small btn-danger"><i class="fas fa-bolt"></i><a class="infobutton" href="https://www.youtube.com/watch?v=ed-hUoeHcz0"> Watch Me In Action</a></button>
+<button type="button" class="btn-small btn-danger"><i class="fas fa-bomb"></i><a class="infobutton" href="https://en.wikipedia.org/wiki/Freakazoid!">My Life Story</a></button>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn-small btn-danger" data-toggle="modal" data-target="#myModal"><i class="fas fa-info-circle"></i>
+
+Important Stats</button>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+<div class="modal-dialog">
+
+<!-- Modal content-->
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal">&times;</button>
+<h4 class="modal-title">Important Statistics</h4>
+</div>
+<div class="modal-body">
+    xx
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div>
+
+</div>
+</div>
+  </div>
+
+</div>
+<div class="row second">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-3">
+  <p>
+
+    <button class="btn-lg btn-dark" type="button" data-toggle="collapse" data-target="#collapse-enemies" aria-expanded="false" aria-controls="collapseExample">
+      My known enemies
+    </button>
+  </p>
+  <div class="collapse" id="collapse-enemies">
+    <div class="card card-body">
+      <h3 class="listhead">My known enemies</h3>
+      <ul class="enemies">
+        <li>Armondo Gutierrez</li>
+        <li>The Lobe</li>
+        <li>Cave Guy</li>
+        <li>Candle Jack</li>
+        <li>Cobra Que</li>
+      </ul>
+      </div>
+    </div>
+  </div>
+  <p>
+<div class="col-lg-6">
+    <button class="btn-lg btn-dark" type="button" data-toggle="collapse" data-target="#collapse-powers" aria-expanded="false" aria-controls="collapseExample">
+      My Powers
+    </button>
+  </p>
+  <div class="collapse" id="collapse-powers">
+    <div class="card card-body">
+  <h3 class="listhead">My Powers (TREMBLE BEFORE THEM)</h3>
+  <ol>
+    <li>Flight</li>
+    <li>Light Speed</li>
+    <li>Superhuman Strength</li>
+    <li>Honestly, whatever the situation calls for …</li>
+  </ol>
+</div>
+</div>
+</div>
+  <div class="col-lg-3"></div>
+</div>
+</div>
 </body>
 </html>
