--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-Explore the docs
-Official Themes
-Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
 
-Bootstrap Themes
-Browse themes
+
 
 </head>
 <body class="container">
@@ -27,7 +23,7 @@ Browse themes
     <img class="banner" src="assets/images/freakazoid-banner.png" alt="Meet Freakazoid">
 </div>
   <div class="col-md-6 col-xs-12">
-    <h1 class="header">Freak Out!</h1>
+    <h1 id="test" class="header">Freak Out!</h1>
     <p class="main">Welcome, clever girls and boys.</p>
     <p class="main">I'm impressed you've made it this far. I'm Freakazoid, hero to literally tens of people across the multiverse</p>
     <p class="main">What's that? You don't <em>remember</em> me?</p>
@@ -105,5 +101,6 @@ Important Stats</button>
   <div class="col-lg-3"></div>
 </div>
 </div>
+<script src="assets/script/logic.js"></script>
 </body>
 </html>
